# four-panel-forge

./: .env.example  README.md  balloon_detection_integration.py  download_models.py  llm_utils.py  main.py  package.json  pyproject.toml  requirements.txt  yuyu_character_classifier.py  yuyu_yolo_dinov2_pipeline.py
public/: index.html  yuyu10_kanji.csv
src/: App.css  App.tsx  config.ts  groundTruthData.ts  prompts.ts
src/components/: CharacterForm.tsx  DetectionResultModal.tsx  DetectionVisualization.tsx  DiffViewer.tsx  DiscussionSection.tsx  HumanInTheLoopControls.tsx  LoadingOverlay.tsx  NavigationHeader.tsx  PanelEditor.tsx  RayVisualization.tsx  RevisionHistoryDialog.tsx  SceneForm.tsx  SerifForm.tsx  SummarySection.tsx  TabNavigation.tsx
src/constants/: characterList.ts  imageList.ts
src/hooks/: useAIDetection.ts  useImageData.ts  useLocalStorage.ts
src/services/: aiAnalysisService.ts  apiService.ts
src/types/: app.ts  manga.ts
src/utils/: balloonDetection.ts  balloonGrouping.ts  dataHelpers.ts  imagePath.ts  imageProcessing.ts  rayVisualization.ts  speakerIdentification.ts  tailDirection.ts  tailShapeAnalysis.ts
